// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResourceQuota/ResourceQuotaDetailsView Default 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h1
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h1 MuiTypography-noWrap"
                >
                  ResourceQuota
                </h1>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="false"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <dl
                class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3"
              >
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Name
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    test-cpu-quota
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Namespace
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    test
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Creation
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <span
                    class="MuiTypography-root makeStyles-valueLabel MuiTypography-body1"
                  >
                    2022-10-25T11:48:48.000Z
                  </span>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Annotations
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <div
                    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
                  >
                    <div
                      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1 MuiGrid-item"
                      style="max-width: 80%;"
                    >
                      <div
                        class="MuiGrid-root MuiGrid-item MuiGrid-zeroMinWidth"
                      >
                        <p
                          class="MuiTypography-root makeStyles-metadataValueLabel MuiTypography-body1"
                          title="kubectl.kubernetes.io/last-applied-configuration: {\\"apiVersion\\":\\"v1\\",\\"kind\\":\\"ResourceQuota\\",\\"metadata\\":{\\"annotations\\":{},\\"name\\":\\"test-cpu-quota\\",\\"namespace\\":\\"test\\"},\\"spec\\":{\\"hard\\":{\\"limits.cpu\\":\\"300m\\",\\"requests.cpu\\":\\"200m\\"}}}
"
                        >
                          kubectl.kubernetes.io/last-applied-configuration: …
                        </p>
                      </div>
                    </div>
                  </div>
                </dd>
                <dt
                  class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataNameCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-4"
                >
                  Status
                </dt>
                <dd
                  class="MuiGrid-root makeStyles-metadataLast makeStyles-metadataCell MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-8"
                >
                  <div
                    class="MuiBox-root MuiBox-root"
                    style="display: inline-block !important; height: 180px;"
                  >
                    <div
                      style="overflow: visible; height: 0px; width: 0px;"
                    >
                      <div
                        aria-colcount="3"
                        aria-rowcount="2"
                        class="ReactVirtualized__Table makeStyles-table"
                        role="grid"
                      >
                        <div
                          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                          role="row"
                          style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
                        >
                          <div
                            class="ReactVirtualized__Table__headerColumn"
                            role="columnheader"
                            style="flex: 0 1 50px;"
                          >
                            <div
                              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                              role="cell"
                              style="text-align: left;"
                            >
                              Resource
                            </div>
                          </div>
                          <div
                            class="ReactVirtualized__Table__headerColumn"
                            role="columnheader"
                            style="flex: 0 1 50px;"
                          >
                            <div
                              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                              role="cell"
                              style="text-align: left;"
                            >
                              Used
                            </div>
                          </div>
                          <div
                            class="ReactVirtualized__Table__headerColumn"
                            role="columnheader"
                            style="flex: 0 1 50px;"
                          >
                            <div
                              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                              role="cell"
                              style="text-align: left;"
                            >
                              Hard
                            </div>
                          </div>
                        </div>
                        <div
                          aria-label="grid"
                          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                          role="rowgroup"
                          style="box-sizing: border-box; direction: inherit; height: -80px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                          tabindex="0"
                        />
                      </div>
                    </div>
                    <div
                      class="resize-triggers"
                    >
                      <div
                        class="expand-trigger"
                      >
                        <div
                          style="width: 1px; height: 1px;"
                        />
                      </div>
                      <div
                        class="contract-trigger"
                      />
                    </div>
                  </div>
                </dd>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <h2
                  class="MuiTypography-root makeStyles-sectionTitle makeStyles-sectionTitle MuiTypography-h2 MuiTypography-noWrap"
                >
                  Events
                </h2>
                <div
                  class="MuiBox-root MuiBox-root"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
                style="display: inline-block !important; height: 120px;"
              >
                <div
                  style="overflow: visible; height: 0px; width: 0px;"
                >
                  <div
                    aria-colcount="5"
                    aria-rowcount="1"
                    class="ReactVirtualized__Table makeStyles-table"
                    role="grid"
                  >
                    <div
                      class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
                      role="row"
                      style="height: 48px; overflow: hidden; padding-right: 0px; width: -32px;"
                    >
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Type
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Reason
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          From
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Message
                        </div>
                      </div>
                      <div
                        class="ReactVirtualized__Table__headerColumn"
                        role="columnheader"
                        style="flex: 0 1 50px;"
                      >
                        <div
                          class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
                          role="cell"
                          style="text-align: left;"
                        >
                          Age
                          <button
                            aria-label="sort swap"
                            class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                            tabindex="0"
                            type="button"
                          >
                            <span
                              class="MuiIconButton-label"
                            >
                              <span />
                            </span>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
                      role="rowgroup"
                      style="box-sizing: border-box; direction: inherit; height: -80px; position: relative; width: -32px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                      tabindex="0"
                    />
                  </div>
                </div>
                <div
                  class="resize-triggers"
                >
                  <div
                    class="expand-trigger"
                  >
                    <div
                      style="width: 1px; height: 1px;"
                    />
                  </div>
                  <div
                    class="contract-trigger"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ResourceQuota/ResourceQuotaDetailsView Error 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-colorError MuiTypography-alignCenter"
                >
                  Phony error is phony!
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots ResourceQuota/ResourceQuotaDetailsView No Item Yet 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSizeSmall MuiButton-sizeSmall"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <span />
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1"
              style="padding-top: 3px;"
            >
              Back
            </p>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <div
          class="MuiBox-root MuiBox-root"
        >
          <div
            class="MuiGrid-root makeStyles-sectionHeader makeStyles-sectionHeader MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-space-between"
          >
            
            <div
              class="MuiGrid-root MuiGrid-item"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-content-xs-flex-end"
              >
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
                <div
                  class="MuiGrid-root MuiGrid-item"
                />
              </div>
            </div>
          </div>
          <div
            class="MuiPaper-root MuiPaper-elevation1 MuiPaper-rounded"
          >
            <div
              aria-busy="true"
              aria-live="polite"
              class="MuiBox-root MuiBox-root"
            >
              <div
                class="MuiBox-root MuiBox-root makeStyles-loaderContainer"
              >
                <div
                  class="MuiCircularProgress-root MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
                  role="progressbar"
                  style="width: 40px; height: 40px;"
                  title="Loading resource data"
                >
                  <svg
                    class="MuiCircularProgress-svg"
                    viewBox="22 22 44 44"
                  >
                    <circle
                      class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
                      cx="44"
                      cy="44"
                      fill="none"
                      r="20.2"
                      stroke-width="3.6"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12"
    >
      <div
        class="MuiBox-root MuiBox-root"
      />
    </div>
  </div>
</div>
`;
